Update Initial EDA Exploratory.ipynb

--- a/dataprep/Initial EDA Exploratory.ipynb
+++ b/dataprep/Initial EDA Exploratory.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,12 +19,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Transform OBSI into column form, basic dataframe\n",
-    "OBSI = pd.read_excel(\"Data Summary QP Re-Analysis.xlsx\", sheet_name = \"ALL OBSI\", header = 1).T\n",
+    "OBSI = pd.read_excel(\"C:\\\\Quiet_Pavement_Local\\\\Data Summary QP Re-Analysis.xlsx\", sheet_name = \"ALL OBSI\", header = 1).T\n",
     "OBSI.rename_axis(None,axis=1, inplace = True)\n",
     "OBSI.drop([0,4], axis = 1, inplace = True)\n",
     "OBSI.columns = OBSI.iloc[0]\n",
