--- a/dataprep/Initial EDA Exploratory.ipynb
+++ b/dataprep/Initial EDA Exploratory.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2958,9 +2958,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -3462,7 +3460,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1ae7439f668>"
+       "<matplotlib.legend.Legend at 0x29a0bfd9668>"
       ]
      },
      "execution_count": 15,
@@ -3508,7 +3506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3571,7 +3569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -3729,7 +3727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3748,7 +3746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3763,7 +3761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 20,
    "metadata": {
     "scrolled": true
    },
@@ -4332,7 +4330,7 @@
        "21                                         0       0       1  All  1297.216762  "
       ]
      },
-     "execution_count": 221,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4401,7 +4399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 21,
    "metadata": {
     "scrolled": true
    },
@@ -5982,7 +5980,7 @@
        "65                                         0       0       1     2  511.401268  "
       ]
      },
-     "execution_count": 230,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6044,7 +6042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 22,
    "metadata": {
     "scrolled": true
    },
@@ -6613,7 +6611,7 @@
        "21                                         0       0       1  All  1238.515787  "
       ]
      },
-     "execution_count": 223,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6682,7 +6680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 23,
    "metadata": {
     "scrolled": true
    },
@@ -8263,7 +8261,7 @@
        "65                                         0       0       1     2  478.710030  "
       ]
      },
-     "execution_count": 231,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8336,30 +8334,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 326,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Janice.Shiu\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\ipykernel_launcher.py:12: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\n",
-      "  if sys.path[0] == '':\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "index 1 is out of bounds for axis 0 with size 1",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-326-c6532ace131e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     25\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     26\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 27\u001b[1;33m \u001b[0msm\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mMANOVA\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0masarray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mresponse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfloat\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0masarray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpredictors\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfloat\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmv_test\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     28\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     29\u001b[0m \u001b[1;31m###COULDN'T FIGURE OUT MANOVA IN TIME, BUT WE CAN DOWNLOAD A CSV OF THE DESIRED DATA HERE:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\statsmodels\\multivariate\\manova.py\u001b[0m in \u001b[0;36mmv_test\u001b[1;34m(self, hypotheses)\u001b[0m\n\u001b[0;32m     68\u001b[0m                     \u001b[0mname\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'x%d'\u001b[0m \u001b[1;33m%\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     69\u001b[0m                     \u001b[0mL\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexog\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 70\u001b[1;33m                     \u001b[0mL\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     71\u001b[0m                     \u001b[0mhypotheses\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mL\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     72\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mIndexError\u001b[0m: index 1 is out of bounds for axis 0 with size 1"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "manova_passby = allpassby.copy()\n",
     "#Make dummy variables for pavement types\n",
@@ -8369,29 +8346,30 @@
     "manova_passby[\"1/4in Chip Seal\",\"1/4in Chip Seal\"]=(manova_passby.index.get_level_values(3).values == \"1/4in Chip Seal\").astype(int)\n",
     "manova_passby[\"Type II Microsurfacing\",\"Type II Microsurfacing\"]=(manova_passby.index.get_level_values(3).values == \"Type II Microsurfacing\").astype(int)\n",
     "manova_passby[\"Type III Microsurfacing\",\"Type III Microsurfacing\"]=(manova_passby.index.get_level_values(3).values == \"Type III Microsurfacing\").astype(int)\n",
-    "\n",
+    "# manova_passby[\"Time\", \"Time\"] = manova_passby[\"Unnamed: 0\"]\n",
     "\n",
     "#Make numerical indicator for whether measurement was an Auto\n",
-    "manova_passby[\"vehtype\"] = (manova_passyby[\"vehtype\"].values == \"Auto\")\n",
+    "manova_passby[\"vehtype\"] = (manova_passby[\"vehtype\"].values == \"Auto\")\n",
     "\n",
     "manova_passby.reset_index(inplace= True)\n",
-    "manova_passby.drop([\"Macro Pavement Type\", \"Unnamed: 2\", \"Pavement Type\"], axis = 1)\n",
+    "manova_passby[\"Year\", \"Year\"] = manova_passby[[\"Unnamed: 0\"]]\n",
+    "manova_passby.drop([\"Unnamed: 0\",\"Macro Pavement Type\", \"Unnamed: 2\", \"Pavement Type\"], axis = 1)\n",
     "\n",
-    "model_vars = manova_passby[[\"Unnamed: 0\",\"pavetemp\",\"speed\",\"vehtype\",\"Chip Seal\",\"Microsurfacing\",\"3/8in Chip Seal\",\"1/4in Chip Seal\",\n",
+    "model_vars = manova_passby[[\"Year\",\"pavetemp\",\"speed\",\"vehtype\",\"Chip Seal\",\"Microsurfacing\",\"3/8in Chip Seal\",\"1/4in Chip Seal\",\n",
     "                           \"Type II Microsurfacing\",\"Type III Microsurfacing\",\"1/3 LZFeq\",\"1/3 LZFmax\"]].dropna(axis = 0).astype(float)\n",
     "\n",
-    "response= manova_passby[\"1/3 LZFeq\"]\n",
+    "response= model_vars[\"1/3 LZFeq\"]\n",
     "\n",
-    "predictors = manova_passby[[\"Unnamed: 0\",\"pavetemp\",\"speed\",\"Chip Seal\",\"Microsurfacing\"]]\n",
-    "predictors.columns = [\"year\",\"pavetemp\",\"speed\",\"Chip Seal\",\"Microsurfacing\"]\n",
+    "predictors = model_vars[[\"Year\",\"pavetemp\",\"speed\",\"Chip Seal\",\"Microsurfacing\"]]\n",
+    "predictors.columns = [\"Year\",\"pavetemp\",\"speed\",\"Chip Seal\",\"Microsurfacing\"]\n",
     "\n",
-    "\n",
-    "\n",
-    "# sm.MANOVA(np.asarray(response).astype(float),np.asarray(predictors).astype(float)).mv_test()\n",
+    "pred_export = model_vars[[\"Year\",\"pavetemp\",\"speed\",\"vehtype\",\"Chip Seal\",\"Microsurfacing\",\"3/8in Chip Seal\",\"1/4in Chip Seal\",\"Type II Microsurfacing\",\"Type III Microsurfacing\"]]\n",
+    "pred_export.columns =[\"Year\",\"pavetemp\",\"speed\",\"vehtype\",\"Chip Seal\",\"Microsurfacing\",\"3/8in Chip Seal\",\"1/4in Chip Seal\",\"Type II Microsurfacing\",\"Type III Microsurfacing\"]\n",
     "\n",
     "###COULDN'T DEBUG MANOVA, BUT WE CAN DOWNLOAD A CSV OF THE DESIRED DATA HERE:\n",
-    "model_vars.to_csv(\"C:\\Quiet_Pavement_Local\\MANOVA_Variables.csv\")\n",
-    "\n",
+    "model_vars[\"1/3 LZFeq\"].to_csv(\"C:\\Quiet_Pavement_Local\\MANOVA_LZFeq.csv\")\n",
+    "model_vars[\"1/3 LZFmax\"].to_csv(\"C:\\Quiet_Pavement_Local\\MANOVA_LZFMax.csv\")\n",
+    "pred_export.to_csv(\"C:\\Quiet_Pavement_Local\\MANOVA_Predictors.csv\")\n",
     "#\"Unnamed: 0\" column is for years"
    ]
   },
