--- a/dataprep/Initial EDA Exploratory.ipynb
+++ b/dataprep/Initial EDA Exploratory.ipynb
@@ -3460,7 +3460,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x2221926eb70>"
+       "<matplotlib.legend.Legend at 0x1a5830cf438>"
       ]
      },
      "execution_count": 15,
@@ -3588,8 +3588,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:51: PerformanceWarning: indexing past lexsort depth may impact performance.\n",
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:52: PerformanceWarning: indexing past lexsort depth may impact performance.\n"
+      "C:\\Users\\Janice.Shiu\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\ipykernel_launcher.py:51: PerformanceWarning: indexing past lexsort depth may impact performance.\n",
+      "C:\\Users\\Janice.Shiu\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\ipykernel_launcher.py:52: PerformanceWarning: indexing past lexsort depth may impact performance.\n"
      ]
     },
     {
@@ -8691,30 +8691,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\pandas\\core\\generic.py:3812: PerformanceWarning: dropping on a non-lexsorted multi-index without a level parameter may impact performance.\n",
-      "  new_axis = axis.drop(labels, errors=errors)\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "Length mismatch: Expected axis has 10 elements, new values have 11 elements",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-25-c65b4f566c51>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     22\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     23\u001b[0m \u001b[0mpred_export\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmodel_vars\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"Year\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"Site\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"pavetemp\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"speed\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"vehtype\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"Chip Seal\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"Microsurfacing\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"3/8in Chip Seal\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"1/4in Chip Seal\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"Type II Microsurfacing\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"Type III Microsurfacing\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 24\u001b[1;33m \u001b[0mpred_export\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolumns\u001b[0m \u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"Year\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"Site\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"pavetemp\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"speed\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"vehtype\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"Chip Seal\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"Microsurfacing\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"3/8in Chip Seal\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"1/4in Chip Seal\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"Type II Microsurfacing\"\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"Type III Microsurfacing\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     25\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     26\u001b[0m \u001b[1;31m###COULDN'T DEBUG MANOVA, BUT WE CAN DOWNLOAD A CSV OF THE DESIRED DATA HERE:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\ProgramData\\Anaconda3\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m__setattr__\u001b[1;34m(self, name, value)\u001b[0m\n\u001b[0;32m   5078\u001b[0m         \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   5079\u001b[0m             \u001b[0mobject\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 5080\u001b[1;33m             \u001b[1;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__setattr__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   5081\u001b[0m         \u001b[1;32mexcept\u001b[0m \u001b[0mAttributeError\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   5082\u001b[0m             \u001b[1;32mpass\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mpandas/_libs/properties.pyx\u001b[0m in \u001b[0;36mpandas._libs.properties.AxisProperty.__set__\u001b[1;34m()\u001b[0m\n",
-      "\u001b[1;32mC:\\ProgramData\\Anaconda3\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m_set_axis\u001b[1;34m(self, axis, labels)\u001b[0m\n\u001b[0;32m    636\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    637\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m_set_axis\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlabels\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 638\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_data\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mset_axis\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0maxis\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlabels\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    639\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_clear_item_cache\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    640\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\ProgramData\\Anaconda3\\lib\\site-packages\\pandas\\core\\internals\\managers.py\u001b[0m in \u001b[0;36mset_axis\u001b[1;34m(self, axis, new_labels)\u001b[0m\n\u001b[0;32m    153\u001b[0m             raise ValueError(\n\u001b[0;32m    154\u001b[0m                 \u001b[1;34m'Length mismatch: Expected axis has {old} elements, new '\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 155\u001b[1;33m                 'values have {new} elements'.format(old=old_len, new=new_len))\n\u001b[0m\u001b[0;32m    156\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    157\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0maxes\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0maxis\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnew_labels\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: Length mismatch: Expected axis has 10 elements, new values have 11 elements"
+      "C:\\Users\\Janice.Shiu\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\ipykernel_launcher.py:25: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n"
      ]
     }
    ],
@@ -8734,31 +8722,161 @@
     "manova_passby.reset_index(inplace= True)\n",
     "manova_passby[\"Year\", \"Year\"] = manova_passby[[\"Unnamed: 0\"]]\n",
     "manova_passby[\"Site\", \"Site\"] = manova_passby[[\"Unnamed: 2\"]]\n",
-    "manova_passby.drop([\"Unnamed: 0\",\"Macro Pavement Type\", \"Unnamed: 2\", \"Pavement Type\"], axis = 1)\n",
+    "manova_passby.drop([\"Unnamed: 0\",\"Macro Pavement Type\", \"Unnamed: 2\", \"Pavement Type\"], axis = 1, inplace = True)\n",
     "\n",
     "model_vars = manova_passby[[\"Year\",\"pavetemp\",\"speed\",\"vehtype\",\"Chip Seal\",\"Microsurfacing\",\"3/8in Chip Seal\",\"1/4in Chip Seal\",\n",
     "                           \"Type II Microsurfacing\",\"Type III Microsurfacing\",\"1/3 LZFeq\",\"1/3 LZFmax\"]].dropna(axis = 0).astype(float)\n",
     "\n",
     "response= model_vars[\"1/3 LZFeq\"]\n",
     "\n",
-    "pred_export = model_vars[[\"Year\",\"Site\",\"pavetemp\",\"speed\",\"vehtype\",\"Chip Seal\",\"Microsurfacing\",\"3/8in Chip Seal\",\"1/4in Chip Seal\",\"Type II Microsurfacing\",\"Type III Microsurfacing\"]]\n",
-    "pred_export.columns =[\"Year\",\"Site\",\"pavetemp\",\"speed\",\"vehtype\",\"Chip Seal\",\"Microsurfacing\",\"3/8in Chip Seal\",\"1/4in Chip Seal\",\"Type II Microsurfacing\",\"Type III Microsurfacing\"]\n",
+    "pred_export = model_vars[[\"Year\",\"pavetemp\",\"speed\",\"vehtype\",\"Chip Seal\",\"Microsurfacing\",\"3/8in Chip Seal\",\"1/4in Chip Seal\",\"Type II Microsurfacing\",\"Type III Microsurfacing\"]]\n",
+    "pred_export.columns =[\"Year\",\"pavetemp\",\"speed\",\"vehtype\",\"Chip Seal\",\"Microsurfacing\",\"3/8in Chip Seal\",\"1/4in Chip Seal\",\"Type II Microsurfacing\",\"Type III Microsurfacing\"]\n",
+    "pred_export[\"Site\"] = manova_passby[\"Site\"]\n",
     "\n",
-    "###COULDN'T DEBUG MANOVA, BUT WE CAN DOWNLOAD A CSV OF THE DESIRED DATA HERE:\n",
+    "# ###COULDN'T DEBUG MANOVA, BUT WE CAN DOWNLOAD A CSV OF THE DESIRED DATA HERE:\n",
     "model_vars[\"1/3 LZFeq\"].to_csv(\"C:\\Quiet_Pavement_Local\\MANOVA_LZFeq.csv\")\n",
     "model_vars[\"1/3 LZFmax\"].to_csv(\"C:\\Quiet_Pavement_Local\\MANOVA_LZFMax.csv\")\n",
-    "pred_export.to_csv(\"C:\\Quiet_Pavement_Local\\MANOVA_Predictors.csv\")\n",
-    "#\"Unnamed: 0\" column is for years"
+    "pred_export.to_csv(\"C:\\Quiet_Pavement_Local\\MANOVA_Predictors.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>pavetemp</th>\n",
+       "      <th>speed</th>\n",
+       "      <th>vehtype</th>\n",
+       "      <th>Chip Seal</th>\n",
+       "      <th>Microsurfacing</th>\n",
+       "      <th>3/8in Chip Seal</th>\n",
+       "      <th>1/4in Chip Seal</th>\n",
+       "      <th>Type II Microsurfacing</th>\n",
+       "      <th>Type III Microsurfacing</th>\n",
+       "      <th>Site</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>S07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>91.0</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>S07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>S07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>46.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>S07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>46.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>S07</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Year  pavetemp  speed  vehtype  Chip Seal  Microsurfacing  3/8in Chip Seal  \\\n",
+       "0   0.0     100.0   39.0      1.0        1.0             0.0              1.0   \n",
+       "1   0.0      91.0   45.0      1.0        1.0             0.0              1.0   \n",
+       "2   0.0     100.0   45.0      1.0        1.0             0.0              1.0   \n",
+       "3   0.0      81.0   46.0      1.0        1.0             0.0              1.0   \n",
+       "4   0.0      81.0   46.0      1.0        1.0             0.0              1.0   \n",
+       "\n",
+       "   1/4in Chip Seal  Type II Microsurfacing  Type III Microsurfacing Site  \n",
+       "0              0.0                     0.0                      0.0  S07  \n",
+       "1              0.0                     0.0                      0.0  S07  \n",
+       "2              0.0                     0.0                      0.0  S07  \n",
+       "3              0.0                     0.0                      0.0  S07  \n",
+       "4              0.0                     0.0                      0.0  S07  "
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# model_vars.head()\n",
-    "manova_passby.head()\n"
+    "pred_export.head()\n"
    ]
   },
   {
