--- a/analysis/Passby_MANOVA_Analyses.Rmd
+++ b/analysis/Passby_MANOVA_Analyses.Rmd
@@ -42,7 +42,6 @@ LZFeq_l <- LZFeq %>%
   select(-Chip.Seal, -Microsurfacing, -value)
 
 
-
 LZFMax_l <- LZFMax %>% 
   gather(key = treatment, value, X3.8in.Chip.Seal:Type.III.Microsurfacing) %>%
   mutate(macro_treatment = ifelse(Microsurfacing == 1, 'Microsurfacing', 'Chip.Seal')) %>%
@@ -63,8 +62,10 @@ This analysis focuses on the observational passby data, where vehicle type varie
 # MANOVAs 
 
 ```{r summary_vals}
+library(knitr)
+library(kableExtra)
 Feq_summary <- LZFeq_l %>%
-  group_by(Year, treatment) %>%  
+  group_by(Year,treatment) %>%  
   summarize(N_total = n(),
             N_autos = sum(vehtype == 1),
             Mean_speed = mean(speed),
@@ -73,7 +74,7 @@ Feq_summary <- LZFeq_l %>%
             SD_pavetemp = sd(pavetemp))
 
 FMax_summary <- LZFMax_l %>%
-  group_by(Year, treatment) %>%  
+  group_by(Year,treatment) %>%  
   summarize(N_total = n(),
             N_autos = sum(vehtype == 1),
             Mean_speed = mean(speed),
@@ -88,32 +89,156 @@ kable(Feq_summary,
 
 ```
 
-```{r manova_1}
-autos_only_predictors = filter(LZFeq_l, vehtype == 1)
+```{r manova_1 with LZFeq}
 
-
-LZFeqResponse = merge(predictors,LZFeq) %>% filter(vehtype == 1 & year == 1)
+LZFeq_l = filter(LZFeq_l, Year !="2019")
 
 Feq.man.macro <- manova(cbind(X63.0,X80.0,X100.0,X125.0,X160.0,X200.0,X250.0,X315.0,X400.0,X500.0,
-                        X630.0,X800.0,X1000.0,X1250.0,X1600.0,X2000.0,X2500.0,X3150.0,X4000.0,X5000.0,
-                        X6300.0,X8000.0,X10000.0,X12500.0,X16000.0,X20000.0)~
-                    Chip.Seal+Microsurfacing+pavetemp+speed, data = LZFeqResponse)
-summary.aov(Feq.man.chip)
+                        X630.0,X800.0,X1000.0,X1250.0,X1600.0,X2000.0,X2500.0,X3150.0,X4000.0,
+                        X5000.0,X6300.0,X8000.0,X10000.0,X12500.0,X16000.0,X20000.0)~
+                    macro_treatment+pavetemp+speed+Site+Year, data = LZFeq_l)
+
 
 Feq.man.micro <- manova(cbind(X63.0,X80.0,X100.0,X125.0,X160.0,X200.0,X250.0,X315.0,X400.0,X500.0,
-                        X630.0,X800.0,X1000.0,X1250.0,X1600.0,X2000.0,X2500.0,X3150.0,X4000.0,X5000.0,
-                        X6300.0,X8000.0,X10000.0,X12500.0,X16000.0,X20000.0)~
-                     X3.8in.Chip.Seal+X1.4in.Chip.Seal+ Type.II.Microsurfacing + Type.III.Microsurfacing +pavetemp+speed, data = LZFeqResponse)
-summary(Feq.man.micro)
-#coef(Feq.man.micro)
+                        X630.0,X800.0,X1000.0,X1250.0,X1600.0,X2000.0,X2500.0,X3150.0,X4000.0,
+                        X5000.0,X6300.0,X8000.0,X10000.0,X12500.0,X16000.0,X20000.0)~
+                      treatment+pavetemp+speed+Site+Year, data = LZFeq_l)
+
+
+macro.coeff = coefficients()
+summary(Feq.man.macro)
+residuals(Feq.man.macro)
+str(Feq.man.macro)
+kable(macro.coeff,
+      caption = "Coefficients of Macro Pavement Type Manova",
+      digits = 3) %>% 
+  kable_styling(bootstrap_options = c("striped", "hover")) 
 ```
 
-```{r manova_post_hoc}
-for (freq in names(LZFeqResponse[22:47])){
-  print("---------------------------------------------------------------------------------------------------")
-  print(freq)
-  an.results = anova(lm(LZFeqResponse[[freq]]~pavetemp+speed+X3.8in.Chip.Seal+X1.4in.Chip.Seal+
-             Type.II.Microsurfacing+Type.III.Microsurfacing+Chip.Seal+Microsurfacing, data = LZFeqResponse))
-  print(an.results)
+```{r manova_post_hoc with LZFeq1}
+LZFeq_l=filter(LZFeq_l, Year != "2019")
+
+LZFeq.aov.results = vector()
+LZFeq.aov.stderr = vector()
+frequencies = vector()
+
+for (freq in names(LZFeq_l[16:41])){
+  an.results = lm(LZFeq_l[[freq]] ~ -1 + macro_treatment + pavetemp * speed + Site + Year, data = LZFeq_l)
+  frequencies = rbind(frequencies, c(as.numeric(substr(freq, 2, nchar(freq)))))
+  LZFeq.aov.results = rbind(LZFeq.aov.results, coef(an.results))
+  LZFeq.aov.stderr = rbind(LZFeq.aov.stderr, coef(summary(an.results))[,"Std. Error"])
 }
+LZFeq.aov.results = data.frame(LZFeq.aov.results)
+LZFeq.aov.results = cbind(LZFeq.aov.results, frequency = frequencies)
+
+LZFeq.aov.stderr = data.frame(LZFeq.aov.stderr)
+LZFeq.aov.stderr = cbind(LZFeq.aov.stderr, frequency = frequencies)
+``` 
+
+
+```{r plotting LZFeq_1 Results}
+library(ggplot2)
+library(grid)
+require(gridExtra)
+
+LZFeq_Chip.Seal = ggplot()+
+  geom_pointrange(data = LZFeq.aov.results, aes(x=frequency, y = macro_treatmentChip.Seal,
+                                                 ymin =macro_treatmentChip.Seal + LZFeq.aov.stderr$macro_treatmentChip.Seal*-2,
+                                                 ymax =macro_treatmentChip.Seal +LZFeq.aov.stderr$macro_treatmentChip.Seal*2))+
+  theme_bw(base_line_size = 1)+
+  scale_x_log10()+
+  labs(title = "LZFeq ANOVA Chip Seal Coefficients", x = "Frequency (Hz)", y = "Sound Intensity (dB)")+
+  ylim(0,75)
+
+LZFeq_Microsurfacing = ggplot()+
+  geom_pointrange(data = LZFeq.aov.results, aes(x=frequency, y = macro_treatmentMicrosurfacing,
+                                                 ymin =macro_treatmentMicrosurfacing + LZFeq.aov.stderr$macro_treatmentMicrosurfacing*-2,
+                                                 ymax =macro_treatmentMicrosurfacing +LZFeq.aov.stderr$macro_treatmentMicrosurfacing*2))+
+  theme_bw(base_line_size = 1)+
+  scale_x_log10()+
+  labs(title = "LZFeq ANOVA Microsurfacing Coefficients", x = "Frequency (Hz)", y = "Sound Intensity (dB)")+
+  ylim(0,75)
+
+grid.arrange(LZFeq_Chip.Seal, LZFeq_Microsurfacing, nrow = 2)
+
 ```
+
+
+
+
+
+
+
+
+
+```{r manova with LZFMax_l}
+LZFMax_l = filter(LZFMax_l, year !="2019")
+
+Feq.man.macro <- manova(cbind(X63.0,X80.0,X100.0,X125.0,X160.0,X200.0,X250.0,X315.0,X400.0,X500.0,
+                        X630.0,X800.0,X1000.0,X1250.0,X1600.0,X2000.0,X2500.0,X3150.0,X4000.0,
+                        X5000.0,X6300.0,X8000.0,X10000.0,X12500.0,X16000.0,X20000.0)~
+                    macro_treatment+pavetemp+speed+Site+Year, data = LZFMax_l)
+summary(Feq.man.macro)
+
+Feq.man.micro <- manova(cbind(X63.0,X80.0,X100.0,X125.0,X160.0,X200.0,X250.0,X315.0,X400.0,X500.0,
+                        X630.0,X800.0,X1000.0,X1250.0,X1600.0,X2000.0,X2500.0,X3150.0,X4000.0,
+                        X5000.0,X6300.0,X8000.0,X10000.0,X12500.0,X16000.0,X20000.0)~
+                      treatment+pavetemp+speed+Site+Year, data = LZFMax_l)
+summary(Feq.man.micro)
+
+```
+```{r manova_post_hoc with LZFMax_l}
+LZFMax_l=filter(LZFMax_l, Year != "2019")
+
+LZFMax.aov.results = vector()
+LZFMax.aov.stderr = vector()
+frequencies = vector()
+
+for (freq in names(LZFeq_l[16:41])){
+  an.results = lm(LZFeq_l[[freq]] ~ -1 + macro_treatment + pavetemp * speed + Site + Year, data = LZFMax_l)
+  frequencies = rbind(frequencies, c(as.numeric(substr(freq, 2, nchar(freq)))))
+  LZFMax.aov.results = rbind(LZFMax.aov.results, coef(an.results))
+  LZFMax.aov.stderr = rbind(LZFMax.aov.stderr, coef(summary(an.results))[,"Std. Error"])
+}
+LZFMax.aov.results = data.frame(LZFMax.aov.results)
+LZFMax.aov.results = cbind(LZFMax.aov.results, frequency = frequencies)
+
+LZFMax.aov.stderr = data.frame(LZFMax.aov.stderr)
+LZFMax.aov.stderr = cbind(LZFMax.aov.stderr, frequency = frequencies)
+```
+
+
+
+```{r plotting with LZFMax Results}
+library(ggplot2)
+library(grid)
+require(gridExtra)
+
+LZFMax_Chip.Seal = ggplot()+
+  geom_pointrange(data = LZFMax.aov.results, aes(x=frequency, y = macro_treatmentChip.Seal,
+                                                 ymin =macro_treatmentChip.Seal + LZFMax.aov.stderr$macro_treatmentChip.Seal*-2,
+                                                 ymax =macro_treatmentChip.Seal +LZFMax.aov.stderr$macro_treatmentChip.Seal*2))+
+  theme_bw(base_line_size = 1)+
+  scale_x_log10()+
+  labs(title = "LZFMax ANOVA Chip Seal Coefficients", x = "Frequency (Hz)", y = "Sound Intensity (dB)")+
+  ylim(0,75)
+
+LZFMax_Microsurfacing = ggplot()+
+  geom_pointrange(data = LZFMax.aov.results, aes(x=frequency, y = macro_treatmentMicrosurfacing,
+                                                 ymin =macro_treatmentMicrosurfacing + LZFMax.aov.stderr$macro_treatmentMicrosurfacing*-2,
+                                                 ymax =macro_treatmentMicrosurfacing +LZFMax.aov.stderr$macro_treatmentMicrosurfacing*2))+
+  theme_bw(base_line_size = 1)+
+  scale_x_log10()+
+  labs(title = "LZFMax ANOVA Microsurfacing Coefficients", x = "Frequency (Hz)", y = "Sound Intensity (dB)")+
+  ylim(0,75)
+
+grid.arrange(LZFMax_Chip.Seal, LZFMax_Microsurfacing, nrow = 2)
+```
+
+
+
+
+
+
+
+
