--- a/analysis/Passby_MANOVA_Analyses.Rmd
+++ b/analysis/Passby_MANOVA_Analyses.Rmd
@@ -104,15 +104,7 @@ Feq.man.micro <- manova(cbind(X63.0,X80.0,X100.0,X125.0,X160.0,X200.0,X250.0,X31
                         X5000.0,X6300.0,X8000.0,X10000.0,X12500.0,X16000.0,X20000.0)~
                       treatment+pavetemp+speed+Site+Year, data = LZFeq_l)
 
-
-macro.coeff = coefficients()
 summary(Feq.man.macro)
-residuals(Feq.man.macro)
-str(Feq.man.macro)
-kable(macro.coeff,
-      caption = "Coefficients of Macro Pavement Type Manova",
-      digits = 3) %>% 
-  kable_styling(bootstrap_options = c("striped", "hover")) 
 ```
 
 ```{r manova_post_hoc with LZFeq1}
@@ -172,7 +164,7 @@ grid.arrange(LZFeq_Chip.Seal, LZFeq_Microsurfacing, nrow = 2)
 
 
 ```{r manova with LZFMax_l}
-LZFMax_l = filter(LZFMax_l, year !="2019")
+LZFMax_l = filter(LZFMax_l, Year !="2019")
 
 Feq.man.macro <- manova(cbind(X63.0,X80.0,X100.0,X125.0,X160.0,X200.0,X250.0,X315.0,X400.0,X500.0,
                         X630.0,X800.0,X1000.0,X1250.0,X1600.0,X2000.0,X2500.0,X3150.0,X4000.0,
