--- a/dataprep/Initial EDA Exploratory.ipynb
+++ b/dataprep/Initial EDA Exploratory.ipynb
@@ -3460,7 +3460,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1a5830cf438>"
+       "<matplotlib.legend.Legend at 0x17f7f0e96d8>"
       ]
      },
      "execution_count": 15,
@@ -3588,8 +3588,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Janice.Shiu\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\ipykernel_launcher.py:51: PerformanceWarning: indexing past lexsort depth may impact performance.\n",
-      "C:\\Users\\Janice.Shiu\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\ipykernel_launcher.py:52: PerformanceWarning: indexing past lexsort depth may impact performance.\n"
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:51: PerformanceWarning: indexing past lexsort depth may impact performance.\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:52: PerformanceWarning: indexing past lexsort depth may impact performance.\n"
      ]
     },
     {
@@ -8691,14 +8691,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Janice.Shiu\\AppData\\Local\\Continuum\\anaconda3\\lib\\site-packages\\ipykernel_launcher.py:25: SettingWithCopyWarning: \n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\pandas\\core\\generic.py:3812: PerformanceWarning: dropping on a non-lexsorted multi-index without a level parameter may impact performance.\n",
+      "  new_axis = axis.drop(labels, errors=errors)\n",
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:25: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -8741,7 +8743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -8869,7 +8871,7 @@
        "4              0.0                     0.0                      0.0  S07  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
